@@ -6,7 +6,7 @@
 
   *) install dependencies listed in README
   *) run "make distclean"
-  *) run "make generators"
+  *) run "make messages"
   *) copy "data/messages.pot" to "data/po/XX.po",
      with "XX" being your iso lang code (example: "de")
   *) edit the "data/po/XX.po" file (translate the strings)
@@ -16,7 +16,7 @@
      Comment[XX]=a media aggregator / podcast catcher
 
      (of course, with the comment translated into the XX language)     
-  *) run "make generators" again
+  *) run "make messages" again
   *) run "make test" to see if it works
   *) add your language to the languages list in setup.py
 
@@ -27,5 +27,6 @@
                   Updated: Fri, 31 Mar 2006 18:11:41 +0200
                   Updated: Wed, 05 Apr 2006 20:13:07 +0200
                   Updated: Fri, 07 Apr 2006 15:28:33 +0200
+                  Updated: Sat, 08 Apr 2006 08:48:59 +0200
 
 
