@@ -1,7 +1,7 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.36.
-.TH GPODDER "1" "April 2006" "gpodder 0.7svn 2006-04-07" "User Commands"
+.TH GPODDER "1" "April 2006" "gpodder 0.7+svn20060407 2006-04-07" "User Commands"
 .SH NAME
-gpodder \- manual page for gpodder 0.7svn 2006-04-07
+gpodder \- manual page for gpodder 0.7+svn20060407 2006-04-07
 .SH DESCRIPTION
 usage: gpodder [options] arg1 arg2
 .PP
