@@ -1,3 +1,11 @@
+Sat, 08 Apr 2006 08:44:31 +0200 <thp@perli.net>
+	* Applied patch for French translation (thanks Alain Tauch)
+	* Updated Makefile to give the user a overview of commands on "make"
+	* Updated Makefile to only generate the messages.pot file when 
+	  explicitly called with "make messages" - this should put us in 
+	  for less useless SVN diffs, as suggested by Alain
+	* Modified "doc/dev/i18n.txt" to reflect changes of today
+
 Fri, 07 Apr 2006 22:00:06 +0200 <thp@perli.net>
 	* Uhh! Gotta love bureaucracy (bureaucrazy?) -- anyway, got some 
 	  more GPL-related copyright notices into the source tree
